# IInfinicraft-Mapper

./: .env.skel  .gitignore  Cargo.toml  diesel.toml  docker-compose.yml  sqlite_mapping.rs  temp.js
app/: Cargo.toml  localhost-key.pem  localhost.pem
app/database/: .env.skel  Cargo.toml
app/database/migrations/2024-02-18-000747_create_elements_table/: down.sql
app/database/migrations/2024-02-18-003204_create_element_maps/: down.sql
app/database/migrations/2024-02-18-005800_create_default_elements/: up.sql
app/database/migrations/2024-02-24-231124_update_result_column_to_be_int/: down.sql  up.sql
app/database/migrations/2024-03-16-082555_add_full_text_index/: down.sql
app/database/migrations/2024-03-18-084923_add_created_at/: down.sql
app/database/src/: lib.rs  schema.rs
app/src/: lib.rs  main.rs
app/src/routes/: rmatch.rs
database/migrations/2024-02-18-003204_create_element_maps/: up.sql
database/migrations/2024-02-18-005800_create_default_elements/: down.sql
database/migrations/2024-02-24-232715_add_foriegn_key/: down.sql
database/migrations/2024-02-25-031544_add_foriegn_key_deleteonupdate/: up.sql
database/migrations/2024-03-17-081647_add json column to elements/: up.sql
database/src/models/: element_maps.rs  elements.rs
database/src/modules/: database.rs
frontend/: .eslintignore  .eslintrc.json  .gitignore  .prettierignore  .prettierrc  index.html  package.json  pnpm-lock.yaml  t.d.ts  tsconfig.json  vite.config.ts
frontend/public/: index.html
frontend/src/: app.tsx  index.tsx  temp2.js  wdyr.ts
frontend/src/@scss/: _root.module.scss  _root.module.scss.d.ts  login.module.scss  login.module.scss.d.ts  template.module.scss  template.module.scss.d.ts  theme.scss
frontend/src/@store/: DBConfig.ts  store.tsx
frontend/src/@store/slices/: elements.ts
frontend/src/@types/: elements.ts
frontend/src/pages/: elementList copy.tsx  elementList.tsx  index.tsx  login.tsx
frontend/src/pages/admin/: map.tsx  (+2 more)
migrations/2024-02-18-000747_create_elements_table/: up.sql
migrations/2024-02-18-005800_create_default_elements/: up.sql
migrations/2024-02-24-232715_add_foriegn_key/: up.sql
migrations/2024-03-16-082555_add_full_text_index/: up.sql
migrations/2024-03-17-081647_add json column to elements/: down.sql
migrations/2024-03-18-084923_add_created_at/: up.sql
src/: lib.rs  main.rs  schema.rs
src/models/: element_maps.rs  elements.rs
src/modules/: database.rs
src/routes/: rmatch.rs
src/templates/: index.rs
