[package]
name = "database"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
diesel = { version = "*", features = [
	"postgres",
	"mysql",
	"chrono",
	"bigdecimal",
	"num-bigint",
	"num-integer",
	"num-traits",
] }
diesel_migrations = "*"
automod = "*"
serde = { version = "*", features = ["derive"] }
dotenv = "*"
chrono = { version = "0.4", features = ["serde"] }
